--- a/admin/index.html
+++ b/admin/index.html
@@ -4,289 +4,24 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>لوحة الإدارة – Khotwa</title>
-  <meta name="color-scheme" content="light dark"/>
+  <meta name="robots" content="noindex,nofollow"/>
   <style>
-    :root {
-      --bg: #0a0f1a;
-      --panel: #1f2937;
-      --primary: #3b82f6;
-      --accent: #4b5563;
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --btn-bg: #111827;
-      --hover-bg: #4b5563;
-      --success: #10b981;
-      --error: #ef4444;
-      --border-radius: 10px;
-      --transition-duration: 0.3s;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Arial, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px;
-      background-color: var(--panel);
-      border-bottom: 2px solid var(--primary);
-    }
-
-    h1 {
-      font-size: 1.75rem;
-      color: var(--primary);
-    }
-
-    .muted {
-      font-size: 0.9rem;
-      color: var(--muted);
-    }
-
-    .tabs {
-      display: flex;
-      gap: 1rem;
-    }
-
-    .tab {
-      padding: 10px 20px;
-      background-color: var(--panel);
-      border-radius: var(--border-radius);
-      cursor: pointer;
-      transition: background-color var(--transition-duration);
-    }
-
-    .tab:hover, .tab[aria-selected="true"] {
-      background-color: var(--primary);
-    }
-
-    .panel {
-      display: none;
-      padding: 20px;
-      background-color: var(--panel);
-      border-radius: var(--border-radius);
-      margin-top: 20px;
-    }
-
-    .panel.active {
-      display: block;
-    }
-
-    .tools {
-      display: flex;
-      gap: 1rem;
-      margin-bottom: 20px;
-    }
-
-    .btn {
-      padding: 12px 25px;
-      background-color: var(--btn-bg);
-      color: var(--text);
-      border-radius: var(--border-radius);
-      cursor: pointer;
-      border: none;
-      transition: background-color var(--transition-duration);
-    }
-
-    .btn:hover {
-      background-color: var(--hover-bg);
-    }
-
-    .btn.success {
-      background-color: var(--success);
-    }
-
-    .btn.error {
-      background-color: var(--error);
-    }
-
-    .content-list {
-      margin-top: 20px;
-    }
-
-    .content-item {
-      background-color: var(--panel);
-      padding: 15px;
-      border-radius: var(--border-radius);
-      margin-bottom: 10px;
-    }
-
-    .row {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 20px;
-    }
-
-    input, select, textarea {
-      width: 100%;
-      padding: 12px;
-      background-color: #1f2937;
-      color: var(--text);
-      border-radius: var(--border-radius);
-      border: 1px solid var(--primary);
-      margin-bottom: 15px;
-    }
-
-    .toasts {
-      position: fixed;
-      inset-inline-start: 16px;
-      inset-block-end: 16px;
-      display: grid;
-      gap: 0.4rem;
-      z-index: 1000;
-    }
-
-    .toast {
-      background: #111827;
-      border: 1px solid var(--primary);
-      border-radius: var(--border-radius);
-      padding: 0.5rem 0.7rem;
-      color: var(--text);
-    }
-
-    .toast.success {
-      background: var(--success);
-      border-color: #1f3d2c;
-    }
-
-    .toast.error {
-      background: var(--error);
-      border-color: #4c1d1d;
-    }
-
-    @media (max-width: 768px) {
-      .row {
-        grid-template-columns: 1fr;
-      }
-    }
+    :root{--ring:#e5e7eb}
+    *{box-sizing:border-box}
+    body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Arial,sans-serif}
+    header{padding:12px 16px;border-bottom:1px solid var(--ring);display:flex;gap:.6rem;align-items:center}
+    .dot{width:8px;height:8px;border-radius:50%;background:#10b981}
+    .muted{color:#6b7280}
   </style>
 </head>
 <body>
+  <header dir="rtl">
+    <span class="dot" aria-hidden="true"></span>
+    <strong>لوحة الإدارة – Khotwa</strong>
+    <span class="muted">(تعمل عبر Decap CMS)</span>
+  </header>
 
-  <div class="wrap">
-    <header>
-      <div>
-        <h1>لوحة الإدارة</h1>
-        <div class="muted">إدارة الموقع بالكامل، بما في ذلك الأخبار، الفعاليات، والإعدادات.</div>
-      </div>
-      <div class="tools">
-        <button class="btn" id="backup">⬇️ تنزيل نسخة احتياطية (JSON)</button>
-      </div>
-    </header>
-
-    <nav class="tabs" role="tablist" aria-label="الأقسام">
-      <button class="tab" role="tab" data-tab="content" aria-selected="true">📝 المحتوى</button>
-      <button class="tab" role="tab" data-tab="settings" aria-selected="false">⚙️ الإعدادات</button>
-      <button class="tab" role="tab" data-tab="analytics" aria-selected="false">📊 التحليلات</button>
-    </nav>
-
-    <div class="panel active" data-panel="content">
-      <h2>إدارة المحتوى</h2>
-      <div id="content-list">
-        <!-- سيتم عرض المقالات هنا -->
-      </div>
-      <button class="btn success" onclick="loadContent()">تحميل المحتوى</button>
-    </div>
-
-    <div class="panel" data-panel="settings">
-      <h2>إعدادات الموقع</h2>
-      <form id="settings-form">
-        <label for="logo">الشعار:</label>
-        <input type="file" id="logo" name="logo" />
-        
-        <label for="language">اللغة:</label>
-        <select name="language" id="language">
-          <option value="ar">العربية</option>
-          <option value="en">English</option>
-        </select>
-
-        <label for="welcome-text">النص الترحيبي:</label>
-        <textarea name="welcome-text" id="welcome-text" rows="4"></textarea>
-
-        <label for="ads">الإعلانات:</label>
-        <textarea name="ads" id="ads" rows="4"></textarea>
-
-        <button type="submit" class="btn success">حفظ الإعدادات</button>
-      </form>
-    </div>
-
-    <div class="panel" data-panel="analytics">
-      <h2>التحليلات</h2>
-      <p>إحصائيات الموقع ستعرض هنا في المستقبل.</p>
-    </div>
-  </div>
-
-  <div class="toasts" id="toasts" aria-live="polite"></div>
-
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      const tabs = document.querySelectorAll('.tab');
-      const panels = document.querySelectorAll('.panel');
-
-      tabs.forEach(tab => {
-        tab.addEventListener('click', () => {
-          tabs.forEach(t => t.setAttribute('aria-selected', 'false'));
-          tab.setAttribute('aria-selected', 'true');
-
-          panels.forEach(panel => panel.classList.remove('active'));
-          const activePanel = document.querySelector(`[data-panel="${tab.dataset.tab}"]`);
-          activePanel.classList.add('active');
-        });
-      });
-    });
-
-    // تحميل المحتوى من Cloudflare Worker
-    function loadContent() {
-      fetch('https://khotwa-data.khotwastudentcouncil.com/data/news.json')
-        .then(response => response.json())
-        .then(data => {
-          const contentList = document.getElementById('content-list');
-          contentList.innerHTML = ''; // Clear previous content
-
-          data.forEach(item => {
-            const contentDiv = document.createElement('div');
-            contentDiv.classList.add('content-item');
-            contentDiv.innerHTML = `
-              <h3>${item.title}</h3>
-              <p>${item.summary}</p>
-              <button class="btn" onclick="editContent(${item.id})">تعديل</button>
-            `;
-            contentList.appendChild(contentDiv);
-          });
-        })
-        .catch(error => {
-          console.error('Error loading content:', error);
-        });
-    }
-
-    // وظيفة تعديل المحتوى
-    function editContent(id) {
-      alert('تعديل المحتوى برقم: ' + id);
-    }
-
-    // حفظ إعدادات الموقع
-    document.getElementById('settings-form').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const logo = document.getElementById('logo').files[0];
-      const language = document.getElementById('language').value;
-      const welcomeText = document.getElementById('welcome-text').value;
-      const ads = document.getElementById('ads').value;
-
-      // إرسال البيانات إلى Cloudflare Worker أو KV لتخزينها
-      console.log('الشعار:', logo);
-      console.log('اللغة:', language);
-      console.log('النص الترحيبي:', welcomeText);
-      console.log('الإعلانات:', ads);
-    });
-  </script>
+  <!-- واجهة Decap CMS -->
+  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 </body>
 </html>
