--- a/index.html
+++ b/index.html
@@ -41,22 +41,28 @@
     :root{--bg:#ffffff;--text:#0f172a;--muted:#64748b;--ring:#e5e7eb;--primary:#1e40af}
     *{box-sizing:border-box} html,body{height:100%}
     body{margin:0;background:var(--bg);color:var(--text);font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;line-height:1.6}
-    a{color:inherit}
+    a{color:inherit;text-decoration:none}
     .container{width:min(1120px,92%);margin-inline:auto}
     .skip-link{position:absolute;inset-inline-start:0;top:-40px;background:#000;color:#fff;padding:.5rem 1rem;z-index:100}
     .skip-link:focus{top:0}
+
     .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;align-items:center;justify-content:space-between;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.6rem;font-weight:700}
     .logo{border-radius:8px}
-    .menu-toggle{display:inline-flex;align-items:center;gap:.4rem;border:1px solid var(--ring);background:#fff;padding:.4rem .6rem;border-radius:.5rem}
+    .menu-toggle{display:inline-flex;align-items:center;gap:.4rem;border:1px solid var(--ring);background:#fff;padding:.4rem .6rem;border-radius:.5rem;cursor:pointer}
     .nav-links{display:flex;gap:1rem;align-items:center}
-    .nav-links a{padding:.4rem .2rem}
-    .lang-toggle{border:1px solid var(--ring);background:#fff;padding:.4rem .6rem;border-radius:.5rem}
+    .nav-links a{padding:.4rem .2rem;border-radius:.5rem}
+    .lang-toggle{border:1px solid var(--ring);background:#fff;padding:.4rem .6rem;border-radius:.5rem;cursor:pointer}
+
     @media (max-width:960px){
-      .nav-links{position:absolute;inset-inline:0;top:64px;background:#fff;border-bottom:1px solid var(--ring);padding:1rem;flex-direction:column;display:none}
+      .nav-links{
+        position:absolute;inset-inline:0;top:64px;background:#fff;border-bottom:1px solid var(--ring);
+        padding:1rem;flex-direction:column;display:none
+      }
       .nav-links[data-open="true"]{display:flex}
     }
+
     .hero{padding:2.5rem 0}
     .hero-inner{display:grid;grid-template-columns:1.2fr .8fr;gap:2rem;align-items:center}
     @media (max-width:980px){.hero-inner{grid-template-columns:1fr}}
@@ -67,6 +73,7 @@
     .btn-primary{background:var(--primary);color:#fff}
     .btn-outline{background:#fff;color:var(--primary)}
     .hero-img img{width:100%;height:auto;border-radius:12px;display:block}
+
     .section-head{display:flex;align-items:center;justify-content:space-between;margin:1.8rem 0 1rem}
     .grid{display:grid;gap:1rem}
     .grid-2{grid-template-columns:repeat(2,1fr)}
@@ -83,7 +90,9 @@
   <noscript><link rel="stylesheet" href="/assets/main.css"></noscript>
 </head>
 <body>
-  <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
+  <!-- Skip link (لغتين) -->
+  <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
+  <a class="skip-link" href="#main" data-lang="en" hidden>Skip to content</a>
 
   <!-- Navbar -->
   <nav class="navbar" aria-label="الشريط العلوي">
@@ -97,10 +106,10 @@
       <button id="menu-toggle" class="menu-toggle" type="button"
               aria-controls="primary-nav" aria-expanded="false" aria-label="فتح وإغلاق القائمة">
         <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h16"/></svg>
-        القائمة
+        <span data-lang="ar">القائمة</span><span data-lang="en" hidden>Menu</span>
       </button>
 
-      <div class="nav-links" id="primary-nav" data-open="false">
+      <div class="nav-links" id="primary-nav" data-open="false" aria-hidden="true">
         <a href="/about.html"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
         <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
         <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
@@ -182,44 +191,15 @@
   <script>
     // سنة الحقوق
     (function(){const y=document.getElementById('year'); if(y) y.textContent=new Date().getFullYear();})();
-    // فتح/غلق قائمة الجوال
+
+    // منيو الجوال + وصولية
     (function(){
-      const btn=document.getElementById('menu-toggle'), nav=document.getElementById('primary-nav');
-      if(btn&&nav){ btn.addEventListener('click',()=>{ const open=nav.getAttribute('data-open')==='true'; nav.setAttribute('data-open', String(!open)); btn.setAttribute('aria-expanded', String(!open)); });}
-    })();
-    // تبديل اللغة
-    (function(){
-      const t=document.getElementById('lang-toggle'); if(!t) return;
-      const set=(lang)=>{
-        document.querySelectorAll('[data-lang]').forEach(el=>{ el.hidden = (el.getAttribute('data-lang')!==lang);});
-        t.textContent = (lang==='ar')?'English':'العربية';
-        t.setAttribute('aria-pressed', lang!=='ar');
-        document.documentElement.lang = (lang==='ar')?'ar':'en';
-        document.documentElement.dir  = (lang==='ar')?'rtl':'ltr';
-      };
-      let cur='ar'; set(cur);
-      t.addEventListener('click',()=>{cur=(cur==='ar')?'en':'ar'; set(cur);});
-    })();
-  </script>
+      const btn = document.getElementById('menu-toggle');
+      const nav = document.getElementById('primary-nav');
+      const mq  = matchMedia('(min-width:961px)');
 
-  <!-- Netlify Identity widget + تحويل رابط الدعوة تلقائيًا -->
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <script>
-    // إذا وصل المستخدم برابط دعوة يحمل #invite_token في الصفحة الرئيسية،
-    // حوّله مباشرة إلى /admin/ مع نفس التوكن ليُكمل إنشاء كلمة المرور.
-    if (location.hash && location.hash.startsWith('#invite_token=')) {
-      location.replace('/admin/' + location.hash);
-    }
-
-    // بعد تسجيل الدخول عبر الودجِت، انقله إلى لوحة الإدارة
-    if (window.netlifyIdentity) {
-      window.netlifyIdentity.on('login', () => {
-        window.location.href = '/admin/';
-      });
-    }
-  </script>
-
-  <!-- نظامك (إن وُجد) -->
-  <script src="/assets/cms-boot.js" defer></script>
-</body>
-</html>
+      function setMenu(open){
+        nav.setAttribute('data-open', String(open));
+        btn.setAttribute('aria-expanded', String(open));
+        nav.setAttribute('aria-hidden', String(!open && !mq.matches));
+        if(open){ (nav.querySelector('a,button')||btn).focus();
