--- a/about.html
+++ b/about.html
@@ -11,20 +11,21 @@
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#0a0f1a" media="(prefers-color-scheme: dark)">
 
-  <!-- OG/Twitter -->
+  <!-- OG/Twitter (محلي لتفادي أعطال DNS) -->
   <meta property="og:type" content="website"/>
   <meta property="og:site_name" content="Khotwa Student Council"/>
   <meta property="og:title" content="من نحن – Khotwa"/>
   <meta property="og:description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن."/>
   <meta property="og:url" content="https://khotwastudentcouncil.com/about.html"/>
-  <meta property="og:image" content="https://g.top4top.io/p_3516rfttb1.jpg"/>
+  <meta property="og:image" content="/assets/apple-touch-icon.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="من نحن – Khotwa"/>
   <meta name="twitter:description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن."/>
-  <meta name="twitter:image" content="https://g.top4top.io/p_3516rfttb1.jpg"/>
+  <meta name="twitter:image" content="/assets/apple-touch-icon.png"/>
 
+  <!-- Structured Data -->
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"Organization","name":"Khotwa Student Council","url":"https://khotwastudentcouncil.com/","logo":"https://g.top4top.io/p_3516rfttb1.jpg","sameAs":["https://www.instagram.com/khotwa.sc/"]}
+  {"@context":"https://schema.org","@type":"Organization","name":"Khotwa Student Council","url":"https://khotwastudentcouncil.com/","logo":"/assets/apple-touch-icon.png","sameAs":["https://www.instagram.com/khotwa.sc/"]}
   </script>
 
   <style>
@@ -41,6 +42,7 @@
     a{color:inherit;text-decoration:none}
     .container{width:min(1120px,92%);margin-inline:auto}
 
+    /* وصولية */
     :where(a,button,[role="button"],input,select,textarea):focus-visible{outline:3px solid #2563eb;outline-offset:3px;border-radius:8px}
     .skip-link{position:absolute;inset-inline-start:1rem;inset-block-start:-100px;background:#fff;color:#000;padding:.6rem .9rem;border-radius:10px;box-shadow:var(--sh-sm);z-index:1000}
     .skip-link:focus{inset-block-start:1rem}
@@ -70,7 +72,7 @@
     }
 
     /* Sections */
-    section{padding:2rem 0;position:relative}
+    section{padding:2rem 0}
     .section-head{display:flex;align-items:flex-end;justify-content:space-between;gap:1rem;margin-bottom:1.2rem}
     .section-head h1{margin:0;font-size:clamp(1.6rem,2.6vw + 1rem,2.2rem)}
     .section-head h2{margin:0;font-size:clamp(1.35rem,1.6vw + 1rem,1.6rem)}
@@ -118,13 +120,14 @@
   </style>
 </head>
 <body>
-  <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
+  <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
+  <a class="skip-link" href="#main" data-lang="en" hidden>Skip to content</a>
 
   <!-- NAVBAR -->
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40" decoding="async" loading="lazy">
+        <img src="/assets/apple-touch-icon.png" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40" decoding="async" loading="lazy">
         <span data-lang="ar">مجلس طلاب خطوة</span>
         <span data-lang="en" hidden>Khotwa Student Council</span>
       </a>
@@ -132,7 +135,7 @@
       <button id="menu-toggle" class="menu-toggle" type="button"
               aria-controls="primary-nav" aria-expanded="false" aria-label="فتح وإغلاق القائمة">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h16"/></svg>
-        القائمة
+        <span data-lang="ar">القائمة</span><span data-lang="en" hidden>Menu</span>
       </button>
 
       <div class="nav-links" id="primary-nav" data-open="false" aria-hidden="true">
@@ -174,58 +177,52 @@
       </div>
 
       <div class="members">
-        <!-- 1: الرئيس (حمد الهاجري) — ركّزنا الوجه: 50% 30% -->
+        <!-- استبدل الروابط أدناه بروابط محلية لاحقًا: /assets/members/hamad.jpg ... -->
         <div class="member-card">
           <img src="https://f.top4top.io/p_35166op0u4.jpg" alt="حمد الهاجري – الرئيس" width="360" height="240"
-               loading="lazy" decoding="async" style="object-position:50% 30%;">
+               loading="lazy" decoding="async" style="object-position:50% 30%;" referrerpolicy="no-referrer">
           <h3 data-lang="ar">حمد الهاجري</h3><h3 data-lang="en" hidden>Hamad Al-Hajeri</h3>
           <p class="muted" data-lang="ar">الرئيس</p><p class="muted" data-lang="en" hidden>President</p>
         </div>
 
-        <!-- 2: نائب الرئيس -->
         <div class="member-card">
           <img src="https://c.top4top.io/p_3516ojbq71.jpg" alt="عبدالله الجابري – نائب الرئيس" width="360" height="240"
-               loading="lazy" decoding="async">
+               loading="lazy" decoding="async" referrerpolicy="no-referrer">
           <h3 data-lang="ar">عبدالله الجابري</h3><h3 data-lang="en" hidden>Abdullah Al-Jaberi</h3>
           <p class="muted" data-lang="ar">نائب الرئيس</p><p class="muted" data-lang="en" hidden>Vice President</p>
         </div>
 
-        <!-- 3: قائد المجموعة -->
         <div class="member-card">
           <img src="https://d.top4top.io/p_3516sprel2.jpg" alt="عبدالهادي المري – قائد المجموعة" width="360" height="240"
-               loading="lazy" decoding="async">
+               loading="lazy" decoding="async" referrerpolicy="no-referrer">
           <h3 data-lang="ar">عبدالهادي المري</h3><h3 data-lang="en" hidden>Abdulhadi Al-Marri</h3>
           <p class="muted" data-lang="ar">قائد المجموعة</p><p class="muted" data-lang="en" hidden>Team Leader</p>
         </div>
 
-        <!-- 4: منسق الفعاليات -->
         <div class="member-card">
           <img src="https://h.top4top.io/p_3516xcf386.jpg" alt="حسن الصيعري – منسق الفعاليات" width="360" height="240"
-               loading="lazy" decoding="async">
+               loading="lazy" decoding="async" referrerpolicy="no-referrer">
           <h3 data-lang="ar">حسن الصيعري</h3><h3 data-lang="en" hidden>Hassan Al-Sieari</h3>
           <p class="muted" data-lang="ar">منسق الفعاليات</p><p class="muted" data-lang="en" hidden>Events Coordinator</p>
         </div>
 
-        <!-- 5: منسق الإعلام -->
         <div class="member-card">
           <img src="https://g.top4top.io/p_3516zrfo75.jpg" alt="حمد المري – منسق الإعلام" width="360" height="240"
-               loading="lazy" decoding="async">
+               loading="lazy" decoding="async" referrerpolicy="no-referrer">
           <h3 data-lang="ar">حمد المري</h3><h3 data-lang="en" hidden>Hamad Al-Marri</h3>
           <p class="muted" data-lang="ar">منسق الإعلام</p><p class="muted" data-lang="en" hidden>Media Coordinator</p>
         </div>
 
-        <!-- 6: محمد الكثيري — ركّزنا الوجه: 50% 35% -->
         <div class="member-card">
           <img src="https://e.top4top.io/p_35164gg6m3.jpg" alt="محمد الكثيري – عضو" width="360" height="240"
-               loading="lazy" decoding="async" style="object-position:50% 35%;">
+               loading="lazy" decoding="async" style="object-position:50% 35%;" referrerpolicy="no-referrer">
           <h3 data-lang="ar">محمد الكثيري</h3><h3 data-lang="en" hidden>Mohamed Al-Katheeri</h3>
           <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden>Member</p>
         </div>
 
-        <!-- 7: عضو -->
         <div class="member-card">
           <img src="https://i.top4top.io/p_35168rtso7.jpg" alt="موزة العلي – عضو" width="360" height="240"
-               loading="lazy" decoding="async">
+               loading="lazy" decoding="async" referrerpolicy="no-referrer">
           <h3 data-lang="ar">موزة العلي</h3><h3 data-lang="en" hidden>Mouza Al-Ali</h3>
           <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden>Member</p>
         </div>
@@ -240,7 +237,9 @@
     </div>
   </footer>
 
+  <!-- JS: منيو + اللغة + فallback صور + سنة الحقوق -->
   <script>
+    // سنة الحقوق
     document.getElementById('year').textContent = new Date().getFullYear();
 
     // منيو
@@ -271,7 +270,7 @@
     });
     document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') setMenu(false); });
 
-    // اللغة
+    // اللغة مع حفظ التفضيل
     const toggleBtn = document.getElementById('lang-toggle');
     let isEn = localStorage.getItem('khotwa_lang') === 'en';
     function setLang(en){
@@ -285,6 +284,14 @@
     }
     toggleBtn.addEventListener('click',()=> setLang(!(localStorage.getItem('khotwa_lang') === 'en')));
     setLang(isEn);
+
+    // Fallback تلقائي للصور الخارجية (لتفادي أخطاء DNS/حجب)
+    const FALLBACK = '/assets/apple-touch-icon.png';
+    document.querySelectorAll('.member-card img').forEach(img=>{
+      img.addEventListener('error', ()=>{ if(img.src !== location.origin + FALLBACK){ img.src = FALLBACK; } });
+    });
+  </script>
+
   <script src="/assets/cms-boot.js" defer></script>
 </body>
 </html>
