--- a/events.html
+++ b/events.html
@@ -17,10 +17,10 @@
   <meta property="og:title" content="الفعاليات – Khotwa">
   <meta property="og:description" content="تابع كل جديد من فعاليات مجلس طلاب خطوة.">
   <meta property="og:url" content="https://khotwastudentcouncil.com/events.html">
-  <meta property="og:image" content="https://g.top4top.io/p_3516rfttb1.jpg">
+  <meta property="og:image" content="/assets/apple-touch-icon.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <!-- JSON-LD (اختياري) -->
+  <!-- JSON-LD -->
   <script type="application/ld+json">
   {"@context":"https://schema.org","@type":"CollectionPage","name":"Khotwa Events","url":"https://khotwastudentcouncil.com/events.html"}
   </script>
@@ -34,8 +34,7 @@
       --r-md:14px;--r-lg:16px;--r-xl:22px;
       --sh-sm:0 2px 10px rgba(2,6,23,.06);--sh-md:0 10px 26px rgba(2,6,23,.08);
     }
-    *{box-sizing:border-box}
-    html,body{height:100%}
+    *{box-sizing:border-box} html,body{height:100%}
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:var(--surface)}
     a{color:inherit;text-decoration:none}
     .container{width:min(1120px,92%);margin-inline:auto}
@@ -70,13 +69,11 @@
       .nav-links a,.lang-toggle{padding:.7rem .9rem}
     }
 
-    /* Sections */
     section{padding:2rem 0}
     .section-head{display:flex;align-items:flex-end;justify-content:space-between;gap:1rem;margin-bottom:1.2rem}
     .section-head h1{margin:0;font-size:clamp(1.6rem,2.6vw + 1rem,2.2rem)}
     .muted{color:var(--muted)}
 
-    /* Cards grid */
     .grid{display:grid;gap:1rem}
     .grid-3{grid-template-columns:repeat(3,1fr)}
     @media(max-width:980px){.grid-3{grid-template-columns:1fr}}
@@ -89,11 +86,9 @@
     .btn{display:inline-flex;justify-content:center;align-items:center;padding:.7rem 1rem;border-radius:12px;border:1px solid transparent;background:var(--primary);color:#fff;font-weight:700}
     .btn:hover{background:var(--primary-600)}
 
-    /* Footer */
     footer{border-top:1px solid var(--ring);background:#fff}
     .foot{display:flex;justify-content:space-between;gap:1rem;align-items:center;padding:1.2rem 0}
 
-    /* Dark */
     @media (prefers-color-scheme: dark){
       :root{--surface:#0a0f1a;--card:#0b1220;--ring:#1f2937;--text:#e5e7eb;--muted:#9ca3af}
       .navbar,footer{background:#0c1220;border-color:var(--ring)}
@@ -117,7 +112,7 @@
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40" decoding="async" loading="lazy">
+        <img src="/assets/apple-touch-icon.png" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40" decoding="async" loading="lazy">
         <span data-lang="ar">مجلس طلاب خطوة</span>
         <span data-lang="en" hidden>Khotwa Student Council</span>
       </a>
@@ -241,7 +236,8 @@
     const EMPTY = document.getElementById('events-empty');
 
     try {
-      const res = await fetch('/assets/data/events.json', { cache: 'no-store' });
+      // لاحظ المسار الصحيح لملف JSON: /data/events.json
+      const res = await fetch('/data/events.json', { cache: 'no-store' });
       if (!res.ok) throw new Error('HTTP ' + res.status);
       const data = await res.json();
       const items = Array.isArray(data.items) ? data.items : [];
@@ -264,7 +260,7 @@
       upcoming.forEach(ev => {
         const node = TPL.content.cloneNode(true);
 
-        // عناوين
+        // عنوان
         node.querySelector('.ev-title-ar').textContent = ev.title || 'فعالية';
         node.querySelector('.ev-title-en').textContent = ev.title_en || ev.title || 'Event';
 
@@ -272,7 +268,7 @@
         node.querySelector('.ev-summary-ar').textContent = ev.summary || '';
         node.querySelector('.ev-summary-en').textContent = ev.summary_en || ev.summary || '';
 
-        // ميتا (مكان + تاريخ)
+        // ميتا (المكان + التاريخ)
         const metaAr = [
           ev.location ? `المكان: ${ev.location}` : null,
           ev._date ? `التاريخ: ${fmtAr.format(ev._date)}` : null
@@ -284,7 +280,7 @@
         node.querySelector('.ev-meta-ar').textContent = metaAr;
         node.querySelector('.ev-meta-en').textContent = metaEn;
 
-        // صورة اختيارية
+        // صورة (اختيارية)
         const thumb = node.querySelector('.thumb');
         if (ev.image) {
           const img = thumb.querySelector('img');
@@ -296,7 +292,7 @@
           thumb.remove();
         }
 
-        // رابط اختياري
+        // رابط (اختياري)
         if (ev.link) {
           const a = node.querySelector('.ev-link');
           a.href = ev.link;
@@ -312,7 +308,7 @@
     } catch (err) {
       console.error('Failed to load events.json', err);
       EMPTY.hidden = false;
-      EMPTY.textContent = 'تعذر تحميل الفعاليات.';
+      EMPTY.textContent = 'تعذّر تحميل الفعاليات.';
     }
   })();
   </script>
