--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="color-scheme" content="light dark"/>
   <title>مجلس طلاب خطوة – Khotwa</title>
   <meta name="description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن. فعاليات، أخبار، وانضمام للمجلس.">
-  <link rel="canonical" href="https://khotwastudentcouncil.com/"/>
+  <link rel="canonical" href="https://khotwastudentcouncil.com/index.html"/>
   <meta name="robots" content="index,follow"/>
 
   <!-- Theme color -->
@@ -24,7 +24,7 @@
   <meta property="og:site_name" content="Khotwa Student Council"/>
   <meta property="og:title" content="مجلس طلاب خطوة – Khotwa"/>
   <meta property="og:description" content="فعاليات، أخبار، وخدمات موجهة لطلاب خطوة في ملبورن."/>
-  <meta property="og:url" content="https://khotwastudentcouncil.com/"/>
+  <meta property="og:url" content="https://khotwastudentcouncil.com/index.html"/>
   <meta property="og:image" content="/assets/apple-touch-icon.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="مجلس طلاب خطوة – Khotwa"/>
@@ -83,6 +83,10 @@
     .muted{color:var(--muted)}
     footer{border-top:1px solid var(--ring);margin-top:2rem;padding:1rem 0;background:#fff}
     .foot{display:flex;justify-content:space-between;align-items:center;gap:1rem;flex-wrap:wrap}
+
+    @media (prefers-reduced-motion: reduce){
+      *{animation-duration:.01ms !important;animation-iteration-count:1 !important;transition-duration:.01ms !important;scroll-behavior:auto !important}
+    }
   </style>
 
   <!-- تحميل CSS خارجي -->
@@ -92,30 +96,30 @@
 <body>
   <!-- Skip link (لغتين) -->
   <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
-  <a class="skip-link" href="#main" data-lang="en" hidden>Skip to content</a>
+  <a class="skip-link" href="#main" data-lang="en" hidden aria-hidden="true">Skip to content</a>
 
   <!-- Navbar -->
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
-      <a class="brand" href="/" aria-label="العودة للرئيسية" aria-current="page">
+      <a class="brand" href="/index.html" aria-label="العودة للرئيسية" aria-current="page">
         <img src="/assets/apple-touch-icon.png" class="logo" alt="شعار مجلس طلاب خطوة" width="40" height="40" decoding="async" loading="lazy">
         <span data-lang="ar">مجلس طلاب خطوة</span>
-        <span data-lang="en" hidden>Khotwa Student Council</span>
+        <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council</span>
       </a>
 
       <button id="menu-toggle" class="menu-toggle" type="button"
               aria-controls="primary-nav" aria-expanded="false" aria-label="فتح وإغلاق القائمة">
         <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h16"/></svg>
-        <span data-lang="ar">القائمة</span><span data-lang="en" hidden>Menu</span>
+        <span data-lang="ar">القائمة</span><span data-lang="en" hidden aria-hidden="true">Menu</span>
       </button>
 
       <div class="nav-links" id="primary-nav" data-open="false" aria-hidden="true">
-        <a href="/about.html"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
-        <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
-        <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
-        <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span></a>
-        <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden>Resources</span></a>
-        <a href="/contact.html"><span data-lang="ar">تواصل</span><span data-lang="en" hidden>Contact</span></a>
+        <a href="/about.html"><span data-lang="ar">من نحن</span><span data-lang="en" hidden aria-hidden="true">About</span></a>
+        <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden aria-hidden="true">News</span></a>
+        <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden aria-hidden="true">Events</span></a>
+        <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden aria-hidden="true">Calendar</span></a>
+        <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden aria-hidden="true">Resources</span></a>
+        <a href="/contact.html"><span data-lang="ar">تواصل</span><span data-lang="en" hidden aria-hidden="true">Contact</span></a>
         <button id="lang-toggle" class="lang-toggle" type="button" aria-pressed="false" aria-label="تبديل اللغة">English</button>
       </div>
     </div>
@@ -125,13 +129,16 @@
   <header class="hero">
     <div class="container hero-inner">
       <div>
-        <h1 data-lang="ar">مجلس طلاب خطوة – صوت الطلاب وشريك الجامعة</h1>
-        <h1 data-lang="en" hidden>Khotwa Student Council – Students’ Voice and University Partner</h1>
+        <!-- H1 واحد مع لغتين -->
+        <h1>
+          <span data-lang="ar">مجلس طلاب خطوة – صوت الطلاب وشريك الجامعة</span>
+          <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council – Students’ Voice and University Partner</span>
+        </h1>
         <p data-lang="ar">نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا، ونبني الجسر بين الطلاب وإدارة الجامعة بفعاليات نوعية وخدمات موجهة.</p>
-        <p data-lang="en" hidden>We empower Khotwa students academically, socially, and culturally, building bridges with the university through quality events and tailored services.</p>
+        <p data-lang="en" hidden aria-hidden="true">We empower Khotwa students academically, socially, and culturally, building bridges with the university through quality events and tailored services.</p>
         <div class="cta-row">
-          <a href="/register.html" class="btn btn-primary"><span data-lang="ar">قدّم للعضوية</span><span data-lang="en" hidden>Apply for Membership</span></a>
-          <a href="/events.html" class="btn btn-outline"><span data-lang="ar">شاهد أقرب الفعاليات</span><span data-lang="en" hidden>See Upcoming Events</span></a>
+          <a href="/register.html" class="btn btn-primary"><span data-lang="ar">قدّم للعضوية</span><span data-lang="en" hidden aria-hidden="true">Apply for Membership</span></a>
+          <a href="/events.html" class="btn btn-outline"><span data-lang="ar">شاهد أقرب الفعاليات</span><span data-lang="en" hidden aria-hidden="true">See Upcoming Events</span></a>
         </div>
       </div>
       <div class="hero-img">
@@ -140,6 +147,7 @@
           alt="مجموعة طلاب مجلس خطوة – La Trobe"
           width="1600" height="900"
           loading="eager" decoding="async" fetchpriority="high"
+          referrerpolicy="no-referrer"
           srcset="https://b.top4top.io/p_35166f7hr1.jpg 1600w,
                   https://b.top4top.io/p_35166f7hr1.jpg 1200w,
                   https://b.top4top.io/p_35166f7hr1.jpg 800w"
@@ -153,14 +161,14 @@
     <section aria-labelledby="about-ar" class="container">
       <div class="section-head">
         <h2 id="about-ar" data-lang="ar">من نحن</h2>
-        <h2 id="about-en" data-lang="en" hidden>About Us</h2>
-        <a class="muted" href="/about.html"><span data-lang="ar">المزيد</span><span data-lang="en" hidden>Learn more</span></a>
+        <h2 id="about-en" data-lang="en" hidden aria-hidden="true">About Us</h2>
+        <a class="muted" href="/about.html"><span data-lang="ar">المزيد</span><span data-lang="en" hidden aria-hidden="true">Learn more</span></a>
       </div>
       <div class="grid grid-2">
-        <article class="card"><h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden>Vision</h3><p data-lang="ar">دعم العملية التعليمية وخدمة المجتمع الجامعي.</p><p data-lang="en" hidden>Support the learning journey and serve our university community.</p></article>
-        <article class="card"><h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden>Mission</h3><p data-lang="ar">تمكين الطلاب وتعزيز علاقتهم بالإدارة الجامعية.</p><p data-lang="en" hidden>Empower students and strengthen ties with university administration.</p></article>
-        <article class="card"><h3 data-lang="ar">الأهداف</h3><h3 data-lang="en" hidden>Goals</h3><p data-lang="ar">التمثيل، القيادة، التفاعل المجتمعي، والدعوة.</p><p data-lang="en" hidden>Representation, leadership, community engagement, and advocacy.</p></article>
-        <article class="card"><h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden>Structure</h3><p data-lang="ar">رئيس ونائب وقادة فرق ومنسقو الأنشطة والإعلام.</p><p data-lang="en" hidden>President, Vice President, team leads, and activity/media coordinators.</p></article>
+        <article class="card"><h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden aria-hidden="true">Vision</h3><p data-lang="ar">دعم العملية التعليمية وخدمة المجتمع الجامعي.</p><p data-lang="en" hidden aria-hidden="true">Support the learning journey and serve our university community.</p></article>
+        <article class="card"><h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden aria-hidden="true">Mission</h3><p data-lang="ar">تمكين الطلاب وتعزيز علاقتهم بالإدارة الجامعية.</p><p data-lang="en" hidden aria-hidden="true">Empower students and strengthen ties with university administration.</p></article>
+        <article class="card"><h3 data-lang="ar">الأهداف</h3><h3 data-lang="en" hidden aria-hidden="true">Goals</h3><p data-lang="ar">التمثيل، القيادة، التفاعل المجتمعي، والدعوة.</p><p data-lang="en" hidden aria-hidden="true">Representation, leadership, community engagement, and advocacy.</p></article>
+        <article class="card"><h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden aria-hidden="true">Structure</h3><p data-lang="ar">رئيس ونائب وقادة فرق ومنسقو الأنشطة والإعلام.</p><p data-lang="en" hidden aria-hidden="true">President, Vice President, team leads, and activity/media coordinators.</p></article>
       </div>
     </section>
 
@@ -168,13 +176,13 @@
     <section aria-labelledby="events-ar" class="container">
       <div class="section-head">
         <h2 id="events-ar" data-lang="ar">الفعاليات القادمة</h2>
-        <h2 id="events-en" data-lang="en" hidden>Upcoming Events</h2>
-        <a class="muted" href="/events.html"><span data-lang="ar">تقويم الفعاليات</span><span data-lang="en" hidden>All events</span></a>
+        <h2 id="events-en" data-lang="en" hidden aria-hidden="true">Upcoming Events</h2>
+        <a class="muted" href="/events.html"><span data-lang="ar">تقويم الفعاليات</span><span data-lang="en" hidden aria-hidden="true">All events</span></a>
       </div>
       <div class="grid grid-3">
-        <article class="card"><h3 data-lang="ar">ورشة تخصصات خطوة</h3><h3 data-lang="en" hidden>Khotwa Majors Workshop</h3><p class="muted" data-lang="ar">IT، الأمن السيبراني، العلوم الحيوية، الأعمال.</p><p class="muted" data-lang="en" hidden>IT, Cybersecurity, Biosciences, Business.</p></article>
-        <article class="card"><h3 data-lang="ar">بطولة البادل</h3><h3 data-lang="en" hidden>Padel Championship</h3><p class="muted" data-lang="ar">تنظيم رياضي طلابي – La Trobe Sports Centre.</p><p class="muted" data-lang="en" hidden>Student sports event – La Trobe Sports Centre.</p></article>
-        <article class="card"><h3 data-lang="ar">ماراثون داخل الحرم</h3><h3 data-lang="en" hidden>On-Campus Marathon</h3><p class="muted" data-lang="ar">مسارات 1K و2.5K و10K.</p><p class="muted" data-lang="en" hidden>1K, 2.5K, and 10K routes.</p></article>
+        <article class="card"><h3 data-lang="ar">ورشة تخصصات خطوة</h3><h3 data-lang="en" hidden aria-hidden="true">Khotwa Majors Workshop</h3><p class="muted" data-lang="ar">IT، الأمن السيبراني، العلوم الحيوية، الأعمال.</p><p class="muted" data-lang="en" hidden aria-hidden="true">IT, Cybersecurity, Biosciences, Business.</p></article>
+        <article class="card"><h3 data-lang="ar">بطولة البادل</h3><h3 data-lang="en" hidden aria-hidden="true">Padel Championship</h3><p class="muted" data-lang="ar">تنظيم رياضي طلابي – La Trobe Sports Centre.</p><p class="muted" data-lang="en" hidden aria-hidden="true">Student sports event – La Trobe Sports Centre.</p></article>
+        <article class="card"><h3 data-lang="ar">ماراثون داخل الحرم</h3><h3 data-lang="en" hidden aria-hidden="true">On-Campus Marathon</h3><p class="muted" data-lang="ar">مسارات 1K و2.5K و10K.</p><p class="muted" data-lang="en" hidden aria-hidden="true">1K, 2.5K, and 10K routes.</p></article>
       </div>
     </section>
   </main>
@@ -217,6 +225,10 @@
         if(open && !nav.contains(e.target) && !btn.contains(e.target)) setMenu(false);
       });
       document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') setMenu(false); });
+      // إغلاق القائمة عند اختيار رابط
+      nav.addEventListener('click', (e)=>{
+        const t=e.target.closest('a'); if(t) setMenu(false);
+      });
     })();
 
     // تبديل اللغة + حفظ التفضيل
@@ -227,9 +239,10 @@
         document.querySelectorAll('[data-lang]').forEach(el=>{
           const want = el.getAttribute('data-lang')===lang;
           el.hidden = !want;
+          el.setAttribute('aria-hidden', String(!want));
         });
         t.textContent = (lang==='ar')?'English':'العربية';
-        t.setAttribute('aria-pressed', String(lang!=='ar'));
+        t.setAttribute('aria-pressed', String(lang!=='ar')); /* زر تبديل وفق WAI-ARIA */
         document.documentElement.lang = (lang==='ar')?'ar':'en';
         document.documentElement.dir  = (lang==='ar')?'rtl':'ltr';
         localStorage.setItem('khotwa_lang', lang);
